package com.directi.training.dip.exercise;

public interface DatabaseInterface {
    int write(String inputString);
}
