@startuml

interface DatabaseInterface {
    +write(inputString: String): int
}

class EncodingModule {
    -db: DatabaseInterface

    +EncodingModule(database: DatabaseInterface)
    +encodeWithFiles(): void
    +encodeBasedOnNetworkAndDatabase(): void
}

class EncodingModuleClient {
    +main(args: String[]): void
}

class MyDatabase {
    -_data: Map<Integer, String>
    -_count: int
    +write(inputString: String): int
}

DatabaseInterface <|-- MyDatabase
EncodingModule --> DatabaseInterface
EncodingModuleClient --> EncodingModule

@enduml